Right before session 3.

--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/elven-cleric-12.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/elven-cleric-12.html
@@ -3,7 +3,7 @@
 {% block hit-dice %}12HD, 100HP{% endblock %}
 {% block initiative %}+1{% endblock %}
 {% block speed %}20{% endblock %}
-{% block ac %}20/21 (t=11, ff=19){% endblock %}
+{% block ac %}17/18 (t=11, ff=16){% endblock %}
 {% block attacks %}+14/+9 {% endblock %}
 {% block damage %}1d6+4{% endblock %}
 {% block face-reach %}5ft.{% endblock %}
@@ -30,7 +30,7 @@
 {% block skills %}{% endblock %}
 {% block feats %}Weapon focus, Endurance, Die Hard, Dodge, Mobility{% endblock %}
 {% block grapple %}{% endblock %}
-{% block gear %}Necklace of Fireballs (V), Full plate +1, Wand cure serious wounds (20x), Mace +1 of paralytic burst, Periapt of Wisdom +2, Amulet of health +2 {% endblock %}
+{% block gear %}Necklace of Fireballs (V), Breast plate +1, Wand cure serious wounds (20x), Mace +1 of paralytic burst, Periapt of Wisdom +2, Amulet of health +2 {% endblock %}
 
 {% block descriptions %}
 
