--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/02-the-assassination.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/02-the-assassination.html
@@ -4,6 +4,8 @@
 {% block summary %}As the adventurers approach the big market an assassination takes place.{% endblock %}
 
 {% block events %}
+    <p>Sketch <a href="../../places/Yauhnn/trade-district/temple-of-Waukeen.html">Waukeen temple</a> first.</p>
+
     <p>
         As you walk towards the temple you are startled by shouting behind you.
         Two rough sailors are having a loud argument about money in front of a pity street merchant.
@@ -18,7 +20,7 @@
         </li>
         <li>The person heads towards the elevator and becomes invisible there.</li>
         <li>The person takes 1 rounds to climb the ropes of the elevator</li>
-        <li><a href="../../characters/Kala+waukeen-inquisitor.html">Kalong</a> get attacked while praying</li>
+        <li><a href="../../characters/Kala+waukeen-inquisitor.html">Kala</a> get attacked while praying</li>
         <li>Fight lasts until pirate or inquisitor is dead. Barbarians break up the fight.</li>
     </ol>
 {% endblock %}
@@ -40,7 +42,11 @@
 {% endblock %}
 
 {% block creatures %}
-    <p>Ninja and 2 Barbarians</p>
+    <p>
+        <a href="../../monsters/Ninja-12.html">Ninja</a>,
+        <a href="../../characters/Kala+waukeen-inquisitor.html">Kala</a>,
+        4x <a href="http://dndsrd.net/fighter.html">fighters</a></li>
+    </p>
 {% endblock %}
 
 {% block traps %}
