--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/03-first-night-in-town.html
@@ -10,14 +10,13 @@
 {% block locations %}
     <p>Depending on whether they have heard from these places they can go:</p>
     <ul>
-        <li>Visit the <a href="../../places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html">Horrid Lust</a></li>
-        <li>Visit the <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Night</a>.</li>
         <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/city-center.html">city center</a></li>
+        <li>Visit the <a href="../../places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html">Horrid Lust</a></li>
+        <li>
+            Search for <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Night</a>
+            in the <a href="../../places/Yauhnn/trade-district/harbor/">harbor</a>.
+        </li>
     </ul>
-    <p>
-        Alternatively they can stay home and scry on Olivet leading to
-        <a href="D0-one-evening-at-Olivets.html">one evening at Olivet's</a>
-    </p>
 {% endblock %}
 
 {% block achievements %}
