--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/02-lifting-the-boat-in-the-water.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/02-lifting-the-boat-in-the-water.html
@@ -10,7 +10,7 @@
     </p>
     <ul>
         <li>Hosan is helping = Fihni teleports in from a distance. Accuses Hosan of treason. He proves he's not a traitor by attacking as well.</li>
-        <li>Hosan is not helping = He teleports in saying he will have to prove to Fihni he was not helping you.</li>
+        <li>Hosan is not helping = He teleports in saying he says he's a little hungry.</li>
         <li>Hosan is dead, party killed/stole = Fihni was searching for killers/thiefs and found them</li>
         <li>Hosan is dead, party didn't do anything = Fihni teleports in asking questions, leaves</li>
     </ul>
