--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
@@ -53,7 +53,11 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>When Faradrim is confronted with all services he needs to make a Will save to resist</p>
+    <dl class="dc">
+        <dt>WillDC: (she's ugly as hell -5)</dt>
+        <dd> 10 < You arrange to have sex with her right there and now. Afterwards it feels dirty.</dd>
+    </dl>
 {% endblock %}
 
 {% block knowledges %}
